# Cmost

./: .gitignore  LICENSE  Makefile  README.md  index.table  main.py  obsids.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  python-publish.yml
docs/: conf.py  index.rst
src/cmost/: __init__.py  download.py  fitting.py  io.py  lick.py  processing.py
tests/: test_download.py  test_io.py  test_lick.py
tests/data/: index2.table  obsids.txt
