[build-system]
build-backend = "setuptools.build_meta"

[project]
name = "cmost"
version = "0.1.0"
authors = [
    {name = "Yunyu Guo",email="guoyunyu2017@outlook.com"}
    ,{name = "Peng Tang",email="1941275544@qq.com"}]

description = "A processing tool for FITS files related to LAMOST"
license = ""
license-files = ["LICENCE"]
readme = "readme.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.23"
  ,"scipy>=1.8"
  ,"astropy>=6.0"
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft ::Mac"
]