[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "cmost"
version = "0.1.3"
authors = [
    {name = "Yunyu Guo",email="yunyug9527@outlook.com"}
    ,{name = "Peng Tang",email="1941275544@qq.com"}]

description = "A processing tool for FITS files related to LAMOST"
license = "Apache-2.0"
license-files = ["LICENCE"]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.8",
  "astropy>=6.0"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS"
]

[tool.ruff.lint]
select = ["F"]
ignore = ["F401"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
